syntax="proto3";

enum StatusCode {
  ERROR = 0;
  SUCCESS = 1;
}

message ValueRequest {
  int64 version = 1;
  int64 timestamp = 2;
  bytes data = 3;
}

message TestAndSetRequest {
  int64 key = 1;
  ValueRequest value = 2;
  int64 version = 3;
}

message SetRequest {
  int64 key = 1;
  int64 timestamp = 2;
  bytes data = 3;
}

message Response {
  StatusCode e = 1;
  ValueRequest value = 2;
}

message DeleteWithVersionRequest {
  int64 key = 1;
  int64 version = 2;
}

message KeyMessage {
  int64 key = 1;
}

service GrpcService {
  rpc SetValue (SetRequest) returns (Response) {}

  rpc GetValue (KeyMessage) returns (Response) {}

  rpc DelValue (KeyMessage) returns (Response) {}

  rpc DelValueWithVersion (DeleteWithVersionRequest) returns (Response) {}

  rpc TestAndSetValues (TestAndSetRequest) returns (Response) {}
}


